# alpha-avionics

./: Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
src/: bmp280.rs  espnow.rs  imu.rs  main.rs  max17048.rs
