[package]
name = "bench-imu"
version = "0.1.0"
authors = ["BuildTools <unconfigured@null.spigotmc.org>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = { version = "0.40.1"}
esp-idf-svc = { version = "0.45.0"}
embedded-hal = "0.2.7"
embedded-svc = "0.24.0"
ism330dhcx = "0.5.1"
bincode = "1.3.3"
serde = { version = "1.0.160", features = ["derive"] }
# esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", features = ["esp32s3","wifi"] }
# bmp280-ehal = { git = "https://github.com/copterust/bmp280.git" }

[build-dependencies]
embuild = "0.31.1"
